# zero-touch

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  DEPLOY.md  DESIGN.md  Dockerfile  Dockerfile.sim  Dockerfile.standalone  README.md  build.sh  docker-build.sh  sim.sh
cmake/: aarch64-toolchain.cmake
daemon/: main.cpp  zerotouchd.cpp  zerotouchd.hpp  zerotouchd_standalone.cpp
inc/zerotouch/: at_modem.hpp  at_modem_transport.hpp  bridge.hpp  config.hpp  direct_action_sink.hpp  ds_sms_transport.hpp  gnmi_command.hpp  gnmi_executor.hpp  gnmi_reply.hpp  gnmi_sink.hpp  local_gnmi_sink.hpp  modem.hpp  modem_factory.hpp  path_policy.hpp  sms_transport.hpp  sms_util.hpp  users.hpp
packaging/etc-iot/: zerotouchd.env
packaging/etc-zerotouch/: users  zerotouch.conf
packaging/sim/: entrypoint.sh
packaging/systemd/: zero-touchd-standalone.service  zero-touchd.service
packaging/sysv/: zero-touchd  zero-touchd-standalone
packaging/yocto/: README.md  zero-touchd_git.bb
schemas/: zerotouch.lua
sim/: zt_sim.cpp
src/: at_modem.cpp  bridge.cpp  config.cpp  direct_action_sink.cpp  ds_sms_transport.cpp  gnmi_command.cpp  gnmi_executor.cpp  gnmi_reply.cpp  local_gnmi_sink.cpp  modem_factory.cpp  path_policy.cpp  sms_util.cpp  users.cpp
test/: at_modem_transport_test.cpp  bridge_test.cpp  config_test.cpp  direct_action_sink_test.cpp  gnmi_command_test.cpp  gnmi_executor_test.cpp  gnmi_reply_test.cpp  mocks.hpp  modem_mock.hpp  modem_test.cpp  path_policy_test.cpp  sms_util_test.cpp  users_test.cpp
